[gd_scene load_steps=58 format=3 uid="uid://7mc83vqkbmqt"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_2qwqg"]
[ext_resource type="Texture2D" uid="uid://cn44cism41tdc" path="res://Assets/characters/player.png" id="1_4yf3r"]
[ext_resource type="PackedScene" uid="uid://c4em773mjfi4y" path="res://Scenes/HpComponent.tscn" id="3_05bly"]
[ext_resource type="PackedScene" uid="uid://cgyiql6h4xmd7" path="res://Scenes/AttackComponent.tscn" id="4_lmxsc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f0ixf"]
atlas = ExtResource("1_4yf3r")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq0xt"]
atlas = ExtResource("1_4yf3r")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6qcy"]
atlas = ExtResource("1_4yf3r")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fme5a"]
atlas = ExtResource("1_4yf3r")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi31k"]
atlas = ExtResource("1_4yf3r")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftgxb"]
atlas = ExtResource("1_4yf3r")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8ofe"]
atlas = ExtResource("1_4yf3r")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpiww"]
atlas = ExtResource("1_4yf3r")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqqb3"]
atlas = ExtResource("1_4yf3r")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkqh0"]
atlas = ExtResource("1_4yf3r")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lg8d"]
atlas = ExtResource("1_4yf3r")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv06e"]
atlas = ExtResource("1_4yf3r")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hysn"]
atlas = ExtResource("1_4yf3r")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6w426"]
atlas = ExtResource("1_4yf3r")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uaj0h"]
atlas = ExtResource("1_4yf3r")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnin0"]
atlas = ExtResource("1_4yf3r")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq08g"]
atlas = ExtResource("1_4yf3r")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_trqrs"]
atlas = ExtResource("1_4yf3r")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kksfp"]
atlas = ExtResource("1_4yf3r")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_scpj4"]
atlas = ExtResource("1_4yf3r")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnlf7"]
atlas = ExtResource("1_4yf3r")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5jji"]
atlas = ExtResource("1_4yf3r")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8oiyu"]
atlas = ExtResource("1_4yf3r")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6qgo"]
atlas = ExtResource("1_4yf3r")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q74r"]
atlas = ExtResource("1_4yf3r")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysu4n"]
atlas = ExtResource("1_4yf3r")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2p7g"]
atlas = ExtResource("1_4yf3r")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g5l3"]
atlas = ExtResource("1_4yf3r")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cigmt"]
atlas = ExtResource("1_4yf3r")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0a74"]
atlas = ExtResource("1_4yf3r")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxmem"]
atlas = ExtResource("1_4yf3r")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqq3k"]
atlas = ExtResource("1_4yf3r")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o558q"]
atlas = ExtResource("1_4yf3r")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqbw7"]
atlas = ExtResource("1_4yf3r")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5ddl"]
atlas = ExtResource("1_4yf3r")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3yq0"]
atlas = ExtResource("1_4yf3r")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f01dc"]
atlas = ExtResource("1_4yf3r")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi2as"]
atlas = ExtResource("1_4yf3r")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu8lo"]
atlas = ExtResource("1_4yf3r")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ga74n"]
atlas = ExtResource("1_4yf3r")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_14efm"]
atlas = ExtResource("1_4yf3r")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou8fe"]
atlas = ExtResource("1_4yf3r")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe4my"]
atlas = ExtResource("1_4yf3r")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x76fj"]
atlas = ExtResource("1_4yf3r")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkl0f"]
atlas = ExtResource("1_4yf3r")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwxf7"]
atlas = ExtResource("1_4yf3r")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y714l"]
atlas = ExtResource("1_4yf3r")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf1to"]
atlas = ExtResource("1_4yf3r")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_moxb5"]
atlas = ExtResource("1_4yf3r")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe386"]
atlas = ExtResource("1_4yf3r")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ti8gm"]
atlas = ExtResource("1_4yf3r")
region = Rect2(240, 240, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_hoic1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0ixf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq0xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6qcy")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fme5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi31k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftgxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8ofe")
}],
"loop": false,
"name": &"hit_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpiww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqqb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkqh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lg8d")
}],
"loop": false,
"name": &"hit_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv06e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hysn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6w426")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaj0h")
}],
"loop": false,
"name": &"hit_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnin0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq08g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trqrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kksfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scpj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnlf7")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5jji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8oiyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6qgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q74r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysu4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2p7g")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g5l3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cigmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0a74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxmem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqq3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o558q")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqbw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5ddl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3yq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f01dc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi2as")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu8lo")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ga74n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14efm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou8fe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe4my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x76fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkl0f")
}],
"loop": true,
"name": &"walk_side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwxf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y714l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf1to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_moxb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe386")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ti8gm")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ljqi6"]
radius = 6.0
height = 12.0

[node name="player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_mask = 9
script = ExtResource("1_2qwqg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_hoic1")
animation = &"hit_side"
frame = 3
frame_progress = 1.0

[node name="bodyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ljqi6")

[node name="HpComponent" parent="." instance=ExtResource("3_05bly")]
maxHp = 5
currHp = 3
iframes = 1.0

[node name="AttackComponent" parent="." instance=ExtResource("4_lmxsc")]
z_index = 1
position = Vector2(8, 0)
scale = Vector2(1.50508, 1.07017)
collision_mask = 2
atk_cd = 0.1
opens_chests = true

[connection signal="health_changed" from="." to="." method="_on_health_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="char_dead" from="HpComponent" to="." method="_on_char_dead"]
[connection signal="damage_taken" from="HpComponent" to="." method="_on_damage_taken"]
[connection signal="healed" from="HpComponent" to="." method="_on_hp_component_healed"]
[connection signal="amplifier_added" from="AttackComponent" to="." method="_on_attack_component_amplifier_added"]
[connection signal="amplifier_removed" from="AttackComponent" to="." method="_on_attack_component_amplifier_removed"]
[connection signal="attack_done" from="AttackComponent" to="." method="_on_attack_component_attack_done"]
[connection signal="attack_started" from="AttackComponent" to="." method="_on_attack_component_attack_started"]
